# cargo-insurance-api

./: .env.example  Makefile  README.md  cargo-insurance.http  docker-compose.yml  pyproject.toml
app/: broker.py  config.py  database.py
app/api/: http_server.py
app/api/middlewares/: kafka_logger.py  user_id.py
app/api/routes/: __init__.py  cargo.py
app/models/: __init__.py  base.py  cargo.py
app/services/base/: handler.py
app/services/cargo/: handler.py  schemas.py
app/utils/: decorators.py
docker/: api.Dockerfile
migrations/: env.py
migrations/versions/: 2024_11_19_1246-23ee408530c7_create_tables.py  2024_11_22_1822-999cf6d2695c_add_modified_at_column_to_cargo_rates.py
