[tool.poetry]
name = "cargo-insurance"
version = "0.1.0"
description = ""
authors = ["Konstantin Grudnitskiy <k.grudnitskiy@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.1"
alembic = {extras = ["async"], version = "^1.14.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
gunicorn = "^23.0.0"
aiokafka = "^0.12.0"
orjson = "^3.10.12"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 79
